fix(form-inline): fix the issue of Form layout spacing in inline mode

--- a/src/Form/styles/common.less
+++ b/src/Form/styles/common.less
@@ -6,7 +6,7 @@
 .@{ns}form-inline {
   > *,
   > .@{ns}btn {
-    margin-right: 30px;
+    margin-right: 20px;
     margin-bottom: 24px;
     vertical-align: top;
   }
@@ -14,6 +14,7 @@
   .rs-control-label {
     vertical-align: top;
     margin-bottom: auto;
+    margin-right: @control-label-margin-right;
     margin-top: @padding-base-vertical;
     display: inline-block;
   }
