--- a/src/FormControl/styles/common.less
+++ b/src/FormControl/styles/common.less
@@ -63,7 +63,6 @@
 .@{ns}form-inline .@{ns}form-group {
   .@{ns}form-control-wrapper {
     display: inline-block;
-    margin-left: @form-control-margin-left;
   }
 
   // Form control wrapper behind Screen only dom no need margin left.
